@@ -508,6 +508,9 @@ void nsh_usbtrace(void);
        int cmd_mkfifo(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #   endif
 #   ifdef CONFIG_FS_READABLE
+#     ifndef CONFIG_NSH_DISABLE_DF
+         int cmd_df(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
+#     endif
 #     ifndef CONFIG_NSH_DISABLE_MOUNT
          int cmd_mount(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #     endif
